2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

        * gtksourceview/gtksourcecompletion.c:
        * gtksourceview/gtksourcecompletion.h:
        Add completion_finish func.

2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
	
	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	* tests/completion-simple.c:
	
	Changed trigger_key API from using accelerator string representation
	to more common key/modifier API
	
2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletionprovider.c:
	* gtksourceview/gtksourcecompletionprovider.h:
	* tests/gsc-provider-test.c:
	Removed gtk_source_completion_provider_finish.

2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>

	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	
	Cleanup code and change set_keys to set_accelerator
	
2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>

	* gtksourceview/gtksourcecontextengine.c:
	* tests/test-widget.c:
	
	Fixed string format warnings
	
2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	Remove gtk_source_completion_finish_completion.

2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>

	* gtksourceview/gtksourceview-marshal.list:
	* gtksourceview/gtksourcecompletionitem.c:
	* gtksourceview/gtksourcecompletionitem.h:
	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletioninfo.c:
	* gtksourceview/gtksourcecompletionproposal.c:
	* gtksourceview/gtksourcecompletionutils.c:
	* gtksourceview/gtksourcecompletionproposal.h:
	* gtksourceview/gtksourcecompletionutils.h:
	* gtksourceview/Makefile.am:
	* tests/gsc-provider-test.c:
	
	Made proposal into interface and GtkSourceCompletionItem a default
	store implementation of GtkSourceCompletionProposal.
	
	Cleaned up utils
	