@@ -1,3 +1,9 @@
+2009-04-11  Jesse van den Kieboom  <jessevdk@gnome.org>
+	
+	* gtksourceview/gtksourcecompletiontriggerkey.c:
+	
+	Implemented completion unref in dispose
+
 2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
         * gtksourceview/gtksourcecompletion.c:
